syntax = "proto3";

// 是否输出到多个文件（不输出到多个文件意味着protoc会输出单个.java文件，所有生成的类都是一个大类的内部类)
option java_multiple_files = true;
// 设置输出的Java代码包名
option java_package = "com.runner.rpc.grpc.helloworld.generated";
// 设置输出的Java代码类名
option java_outer_classname = "HelloWorldProtoOuter";
option objc_class_prefix = "HLW";

package com.runner.rpc.grpc.helloworld.generated;

service Greeter{
  rpc sayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}